ocp-odf/demo-app/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ceph-demo
  labels:
    app.kubernetes.io/part-of: ceph-external-demo
