ocp-odf/demo-app/manifests/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-demo-app
  namespace: ceph-demo
  labels:
    app: ceph-demo-app
spec:
  selector:
    app: ceph-demo-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
