ocp-odf/demo-app/manifests/08-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ceph-demo-app
  namespace: ceph-demo
  labels:
    app: ceph-demo-app
spec:
  to:
    kind: Service
    name: ceph-demo-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
